--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # .env (Forma estándar y recomendada)
 INFLUXDB_URL="http://localhost:8086"
-INFLUXDB_TOKEN= "UhV6WdK-zvSxV7Q9YEGmOv2oo4X_w1x9LnetImY1ryQmy7YFYh2J-gG2jl4dCQ-fL5r4HqMVdxX4_8ACGS3MgA=="
-INFLUXDB_ORG="BITERGY"
-INFLUXDB_BUCKET="API2"
+INFLUXDB_TOKEN= ""
+INFLUXDB_ORG=""
+INFLUXDB_BUCKET=""
